REGRESSION(r162744): wsj.com paints white https://bugs.webkit.org/show_bug.cgi?id=127619

Reviewed by Sam Weinig.

Source/WebCore:

Test: fast/css/stylesheet-layout-with-pending-paint.html

* dom/Document.cpp:
(WebCore::Document::styleResolverChanged):

    Ensure we switch out from IgnoreLayoutWithPendingSheets state after stylesheet loads complete.

LayoutTests:

* fast/css/stylesheet-layout-with-pending-paint-expected.html: Added.
* fast/css/stylesheet-layout-with-pending-paint.html: Added.


Canonical link: https://commits.webkit.org/145628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162763 268f45cc-cd09-0410-ab3c-d52691b4dbfc